--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header><section id="downloads" class="clearfix">
+<header id="downloads" class="clearfix">
     <a href="https://github.com/luispedro/ngless/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
     <a href="https://github.com/luispedro/ngless/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
     <a href="https://github.com/luispedro/ngless" id="view-on-github" class="button"><span>View on GitHub</span></a>
-</section></header>
+</header>
